platform/runtime/staging/import_legacy/latest/exam_integration/bounded_probe/runtime/traces/exam.exams-curated-exam_final-v1.d1df32d8.attempt.001/user.out.build.stderr
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/bounded_probe/runtime/workspaces/exam.exams-curated-exam_final-v1.d1df32d8.attempt.001/submission/fix_z.c:1:2: error: #error forced failing integration submission
    1 | #error forced failing integration submission
      |  ^~~~~
